=============================================================
Version 3.1.2
=============================================================



=============================================================
Version 3.1.1
=============================================================

    - Feature: [import] Optimization of the order recovery system
    - Feature: [import] Setting up a cache for synchronizing catalogs ids
    - Feature: [action] Refactoring and optimization of actions on orders
    - Feature: [import] Add semantic search for carrier match
    - Feature: [export] Add price_wholesale field in export feed
    - Bugfix: [import] Updating Mondial Relay data in the specific plugin table
    - Bugfix: [export] Display of disabled products in grid and counter

=============================================================
Version 3.1.0
=============================================================

    - Feature: Registering marketplace data in a json file
    - Feature: Optimization of API calls between PrestaShop and Lengow
    - Feature: Disabling the Lengow tracker and changing the product ID
    - Feature: Add meta_title field in legacy export feed
    - Bugfix: [export] Improved deletion of duplicate headers
    - Bugfix: [action] Management of orders waiting to return from the marketplace
    - Bugfix: count() parameter must be an array for php 7.2
    - Bugfix: [action] Caching legacy export data
    - Bugfix: Correction on the number of products per page in the pagination
    - Bugfix: Update of the lengow_order table directly after the creation of the PrestaShop order

=============================================================
Version 3.0.5
=============================================================

    - Bugfix: [export] Deleting duplicate fields case-sensitive
    - Bugfix: [export] Add default value for excluded products array
    - Bugfix: [export] Recovering parent images when no image is selected for the combination