@@ -1,0 +1,6 @@
+<h1>{mail_title}</h1>
+<br />
+<br />
+<ul>
+{mail_body}
+</ul>
