@@ -1,0 +1,3 @@
+{mail_title}
+
+{mail_body}
