@@ -2,7 +2,8 @@
 Version 3.1.2
 =============================================================
 
-
+    - Bugfix: [import] Moving email templates for PrestaShop 1.7
+    - Bugfix: Fixed the module update process
 
 =============================================================
 Version 3.1.1
